# PrivateDecisionTree

./: .gitignore  CMakeLists.txt  README.md  bench_XCMP.cpp  main.cpp
include/: GreaterThan.hpp
include/network/: PPDT.hpp  net_io.hpp
include/util/: Timer.hpp  literal.hpp
samples/: README.md  art-housing.model  art-large.model  art-spambase.model  art.model  heart-disease.input  heart-disease.model  housing.result  spambase.input  spambase.result
scripts/: filter_client.py  filter_server.py  gen_random_tree.py
src/: CMakeLists.txt  PPDTClient.cpp  PPDTServer.cpp  PrivateGreaterThan.cpp  Timer.cpp  net_io.cpp  util.cpp
